# pg_function_load_tests

./: .gitignore  README.md
src/: .env  SERVICES.MD  docker-compose.yml  run-benchmark.sh  test-services.sh  test.http
src/_k6/: Dockerfile
src/_postgres/: init.sql
src/bun-app-v1.1.42/: Dockerfile  app.ts  package.json
src/bun-app-v1.3.3/: Dockerfile  app.ts  package.json
src/django-app-v5.1.4/: Dockerfile  requirements.txt
src/django-app-v6.0/: requirements.txt
src/django-app-v6.0.1/: requirements.txt
src/fastapi-app-v0.115.6/: Dockerfile  app.py  requirements.txt
src/fastapi-app-v0.127.1/: requirements.txt
src/fastapi-app-v0.128.0/: app.py  requirements.txt
src/fastify-app-v5.2.1/: package.json
src/fastify-app-v5.6.2/: Dockerfile  app.js  package.json
src/fastify-app-v5.7.1/: app.js  package.json
src/go-app-v1.23.4/: Dockerfile  go.mod
src/go-app-v1.24/: Dockerfile  go.mod  main.go
src/go-app-v1.25/: Dockerfile  go.mod  main.go
src/java24-spring-boot-v3.4.1/: Dockerfile  pom.xml
src/java24-spring-boot-v4.0.1/: pom.xml
src/net10-minapi-dapper-jit/: Dockerfile  Program.cs  Project.csproj
src/net10-minapi-ef-jit/: Dockerfile  Program.cs  Project.csproj
src/net9-minapi-ef-jit/: Dockerfile  Program.cs  Project.csproj
src/npgsqlrest-aot-v2.36.2/: appsettings.json
src/npgsqlrest-aot-v3.2.2/: appsettings.json
src/npgsqlrest-aot-v3.4.7/: appsettings.json
src/npgsqlrest-jit-v3.2.2/: appsettings.json
src/npgsqlrest-jit-v3.4.6/: appsettings.json
src/rust-app-v1.83.0/: Cargo.toml  Dockerfile
src/rust-app-v1.83.0/src/: main.rs
(+773 files in other folders)
