[package]
name = "rust-postgres-app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
tokio = { version = "1.42", features = ["full"] }
deadpool-postgres = "0.14"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
